Initialize db connection

--- a/market_pulse/market_pulse/src/main/resources/application.properties
+++ b/market_pulse/market_pulse/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=market_pulse
+spring.datasource.url=jdbc:postgresql://localhost:5432/market_pulse
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
